# github-actions-example

./: .gitignore  README copy.md  README.md  cdk.json  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt
.github/workflows/: cdk-ci.yml  deploy-api.yml  deploy.yml  python-ci.yml  release.yml
app/: .gitignore  README.md  env.d.ts  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.vitest.json
app/src/: datadog.ts  db.ts  main.ts
app/src/router/: index.ts
app/src/views/: AboutView.vue  HomeView.vue
lib/: cdk-stack.ts
src/: example_lambda.py
src/lambda_functions/: memo_func.py
src/python_cdk_app/: __init__.py
tests/: cdk.test.ts  test_example_lambda.py  test_memo_func.py
